# mcp-gateway

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  spec.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_user_preferences.py
docker/: app.Dockerfile  embedder.Dockerfile  entrypoint.sh
docker/postgres/: init-extensions.sql
embedder/: pyproject.toml
embedder/src/embedder/: app.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx
frontend/src/components/: AdminRoute.tsx  JobToast.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useJobEvents.ts
frontend/src/pages/: ApiKeysPage.tsx  DocumentDetailPage.tsx  DocumentsPage.tsx  LoginPage.tsx  PreferencesPage.tsx  SearchPage.tsx  SetupPage.tsx  SystemPage.tsx  UploadPage.tsx  UsersPage.tsx
frontend/src/types/: react.d.ts
src/mcp_gateway/: __init__.py  audit.py  auth.py  config.py  db.py  db_sync.py  events.py  mcp_server.py  minio_client.py  password_validation.py  redis.py  search.py  seed.py
src/mcp_gateway/api/: app.py  deps.py
src/mcp_gateway/api/routes/: api_keys.py  auth.py  documents.py  jobs.py  search.py  setup.py  system.py  uploads.py  users.py
src/mcp_gateway/api/schemas/: api_keys.py  auth.py  documents.py  search.py  uploads.py  (+1 more)
src/mcp_gateway/models/: __init__.py  api_key.py  audit_log.py  base.py  chunk.py  document.py  document_page.py  document_version.py  enums.py  ingestion_job.py  upload.py  user.py
src/mcp_gateway/worker/: entry.py  pipeline.py
(+6 files in other folders)
