[project]
name = "lka-embedder"
version = "0.1.0"
description = "Embedding model server for Local Knowledge Appliance"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sentence-transformers>=3.3.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embedder"]

[project.scripts]
lka-embedder = "embedder.app:main"
